--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,8 @@
                         <div class="col-12">
                             <div class="form-group">
                                 <div class="p-t-20">
-                                    <button class="btn btn-info" id="to-recover" type="button"><i class="fa fa-lock m-r-5"></i> Lost password?</button>
+                                    <button class="btn btn-info" id="to-recover" type="button" ><i class="fa fa-lock m-r-5"></i> Forgot password</button>
+                                    <button class="btn btn-info" id="signUpBtn" type="button" href="/signUp"><i class="fa fa-lock m-r-5"></i> SignUp</button>
                                     <button class="btn btn-success float-right" type="submit">Login</button>
                                 </div>
                             </div>
@@ -132,6 +133,11 @@
 <!-- This page plugin js -->
 <!-- ============================================================== -->
 <script>
+
+    const signUpBtn = document.querySelector("#signUpBtn");
+    signUpBtn.onclick = () => {
+        window.location.href="/signUp"
+    };
 
     $('[data-toggle="tooltip"]').tooltip();
     $(".preloader").fadeOut();
