Login - Implement signUp process

--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -41,36 +41,42 @@
         <div class="auth-box bg-dark border-top border-secondary">
             <div>
                 <div class="text-center p-t-20 p-b-20">
-                    <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>
+                    <!-- <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>-->
+                    <h2> Cellit SignUp </h2>
                 </div>
                 <!-- Form -->
-                <form class="form-horizontal m-t-20" action="index.html">
+                <form class="form-horizontal m-t-20" method="post" th:action="@{/signUp}">
                     <div class="row p-b-30">
                         <div class="col-12">
+                            <!-- username -->
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
                                 </div>
-                                <input type="text" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
+                                <input type="text" name="username" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
                             </div>
-                            <!-- email -->
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>
-                                </div>
-                                <input type="text" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1" required>
-                            </div>
+<!--                            &lt;!&ndash; email &ndash;&gt;-->
+<!--                            <div class="input-group mb-3">-->
+<!--                                <div class="input-group-prepend">-->
+<!--                                    <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>-->
+<!--                                </div>-->
+<!--                                <input type="text" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1" required>-->
+<!--                            </div>-->
+
+                            <!-- password -->
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-warning text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
                                 </div>
-                                <input type="text" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                <input type="password" name="password" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required>
                             </div>
+
+                            <!-- confirm password -->
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-info text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
                                 </div>
-                                <input type="text" class="form-control form-control-lg" placeholder=" Confirm Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                <input type="password" name="confirmPassword" class="form-control form-control-lg" placeholder=" Confirm Password" aria-label="Password" aria-describedby="basic-addon1" required>
                             </div>
                         </div>
                     </div>
