--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,6 +49,15 @@
 <!--                    <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>-->
                     <h2> Cellit </h2>
                 </div>
+<!--                th:if="${param.error}"-->
+                <div class="card-body border-top"  th:if="${param.error}">
+                    <div class="alert alert-danger" role="alert">
+                        <h4 class="alert-heading">Login error</h4>
+                        <hr>
+                        <p class="mb-0" th:text="${param.error}"></p>
+                    </div>
+                </div>
+
                 <!-- Form -->
                 <form class="form-horizontal m-t-20" id="loginform" method="post" th:action="@{/login}">
                     <div class="row p-b-30">
