--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -50,11 +50,19 @@
                     <h2> Cellit </h2>
                 </div>
 <!--                th:if="${param.error}"-->
-                <div class="card-body border-top"  th:if="${param.error}">
+<!--                <div class="card-body border-top"  th:if="${param.error}">-->
+<!--                    <div class="alert alert-danger" role="alert">-->
+<!--                        <h4 class="alert-heading">Login error</h4>-->
+<!--                        <hr>-->
+<!--                        <p class="mb-0" th:text="${param.error}"></p>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+                <div class="card-body border-top" th:if="${errorMsg}">
                     <div class="alert alert-danger" role="alert">
                         <h4 class="alert-heading">Login error</h4>
                         <hr>
-                        <p class="mb-0" th:text="${param.error}"></p>
+                        <p class="mb-0" th:text="${errorMsg}"></p>
                     </div>
                 </div>
 
@@ -66,7 +74,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
                                 </div>
-                                <input type="text" name="username" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
+                                <input type="text" th:value="${username}" name="username" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
