--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -44,6 +44,15 @@
                     <!-- <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>-->
                     <h2> Cellit SignUp </h2>
                 </div>
+
+                <div class="card-body border-top" th:if="${errorMsg}">
+                    <div class="alert alert-danger" role="alert">
+                        <h4 class="alert-heading">Login error</h4>
+                        <hr>
+                        <p class="mb-0" th:text="${errorMsg}"></p>
+                    </div>
+                </div>
+
                 <!-- Form -->
                 <form class="form-horizontal m-t-20" method="post" th:action="@{/signUp}">
                     <div class="row p-b-30">
