--- a/src/main/resources/templates/mainBoard.html
+++ b/src/main/resources/templates/mainBoard.html
@@ -195,7 +195,9 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="javascript:void(0)"><i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</a>
+                        <form id="logoutForm" method="post" th:action="@{/logout}">
+                            <button class="dropdown-item" type="submit"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</button>
+                        </form>
                     </div>
                 </li>
                 <!-- ============================================================== -->
