--- a/src/main/resources/templates/mainBoard.html
+++ b/src/main/resources/templates/mainBoard.html
@@ -25,6 +25,7 @@
 
     <!-- Common js -->
     <script th:src="@{/common/js/const.js}"></script>
+
 </head>
 <body>
 <!-- ============================================================== -->
@@ -50,10 +51,10 @@
                         <span class="d-block d-md-none"><i class="fa fa-plus"></i></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal" data-target="#add-new-event">Create Cell Unit</a>
+                        <a class="dropdown-item" href="#">....</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#">....</a>
                     </div>
                 </li>
                 <!-- ============================================================== -->
@@ -233,9 +234,50 @@
     </div>
 </div>
 
+<!-- Modal Add Category -->
+<div class="modal fade none-border" id="add-new-event">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title"><strong>Create new Cell Unit</strong></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="createNewCellUnitForm">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label class="control-label">Category Name</label>
+                            <input id="cellName" class="form-control form-white" placeholder="Enter name" type="text" name="category-name" />
+                        </div>
+                        <div class="col-md-6">
+                            <label class="control-label">Choose Category Color</label>
+                            <select class="form-control form-white" data-placeholder="Choose a color..." name="category-color">
+                                <option value="success">Success</option>
+                                <option value="danger">Danger</option>
+                                <option value="info">Info</option>
+                                <option value="primary">Primary</option>
+                                <option value="warning">Warning</option>
+                                <option value="inverse">Inverse</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button id="createNewCellUnitSubmitButton" type="button" class="btn btn-danger waves-effect waves-light save-category">Save</button>
+                <button type="button" class="btn btn-secondary waves-effect" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <script th:inline="javascript">
     const userName = [[${userName}]];
     const URL_GET_CELLS = "/api/account/" + userName + "/cells";
+    const createNewCellUnitForm = document.querySelector("#createNewCellUnitForm"),
+        cellName = createNewCellUnitForm.querySelector("#cellName"),
+        createNewCellUnitSubmitButton = document.querySelector("#createNewCellUnitSubmitButton");
 
     console.log(userName)
 
@@ -248,6 +290,10 @@
         }).then((res) => {
             console.log(res)
         })
+    };
+
+    createNewCellUnitSubmitButton.onclick = () => {
+
     };
 
 </script>
