Test - Enhance Account api as collectionModel

--- a/src/main/resources/templates/mainBoard.html
+++ b/src/main/resources/templates/mainBoard.html
@@ -246,7 +246,7 @@
                 <form id="createNewCellUnitForm">
                     <div class="row">
                         <div class="col-md-6">
-                            <label class="control-label">Category Name</label>
+                            <label class="control-label">Cell Unit Name</label>
                             <input id="cellName" class="form-control form-white" placeholder="Enter name" type="text" name="category-name" />
                         </div>
                         <div class="col-md-6">
@@ -289,7 +289,7 @@
             }
         }).then((res) => {
             console.log(res)
-        })
+    })
     };
 
     createNewCellUnitSubmitButton.onclick = () => {
