JPA - Create queryDSL to get findAccount

--- a/src/main/resources/templates/mainBoard.html
+++ b/src/main/resources/templates/mainBoard.html
@@ -294,6 +294,8 @@
             }
         }).then((res) => {
             console.log(res)
+        }).then((error) => {
+            console.log(error)
         });
     };
 
