JPA - Create queryDSL to get findAccount

--- a/src/main/resources/templates/mainBoard.html
+++ b/src/main/resources/templates/mainBoard.html
@@ -306,7 +306,7 @@
 
         const body = {
             "username" : [[${username}]],
-            "password" : "123",
+            "password" : [[${password}]],
             "grant_type" : "password",
         };
 
