--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,6 +23,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
+
+        <!-- Common js -->
+        <script th:src="@{/common/js/const.js}"></script>
+        <script th:src="@{/common/js/util.js}"></script>
     </head>
 </head>
 <body>
@@ -58,23 +62,23 @@
 <!--                    </div>-->
 <!--                </div>-->
 
-                <div class="card-body border-top" th:if="${errorMsg}">
+                <div id="loginErrorMsgBox" class="card-body border-top" style="display: none">
                     <div class="alert alert-danger" role="alert">
                         <h4 class="alert-heading">Login error</h4>
                         <hr>
-                        <p class="mb-0" th:text="${errorMsg}"></p>
+                        <p id="loginErrorMsg" class="mb-0"></p>
                     </div>
                 </div>
 
                 <!-- Form -->
-                <form class="form-horizontal m-t-20" id="loginform" method="post" th:action="@{/login}">
+                <form class="form-horizontal m-t-20" id="login_Form">
                     <div class="row p-b-30">
                         <div class="col-12">
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
                                 </div>
-                                <input type="text" th:value="${username}" name="username" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
+                                <input type="text" th:value="${accountname}" name="accountname" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
                             </div>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
@@ -90,7 +94,7 @@
                                 <div class="p-t-20">
                                     <button class="btn btn-info" id="to-recover" type="button" ><i class="fa fa-lock m-r-5"></i> Forgot password</button>
                                     <button class="btn btn-info" id="signUpBtn" type="button" href="/signUp"><i class="fa fa-lock m-r-5"></i> SignUp</button>
-                                    <button class="btn btn-success float-right" type="submit">Login</button>
+                                    <button id="loginButton" class="btn btn-success float-right" type="button">Login</button>
                                 </div>
                             </div>
                         </div>
@@ -150,10 +154,35 @@
 <!-- This page plugin js -->
 <!-- ============================================================== -->
 <script>
+    const URL_POST_JWT_TOKEN = "/auth";
 
-    const signUpBtn = document.querySelector("#signUpBtn");
+    const signUpBtn = document.querySelector("#signUpBtn"),
+        loginBtn = document.querySelector("#loginButton"),
+        loginErrorMsgBox = document.querySelector("#loginErrorMsgBox"),
+        loginErrorMsg = document.querySelector("#loginErrorMsg");
+
     signUpBtn.onclick = () => {
         window.location.href="/signUp"
+    };
+
+    loginBtn.onclick = () => {
+
+        fetch(URL_POST_JWT_TOKEN, {
+            method: HTTP.METHOD_POST,
+            headers: {
+                'Content-type': MediaType.JSON
+            },
+            body: Util.formDataToJson("login_Form")
+        }).then((res) => {
+            Error.handleFetchError(res)
+        }).then((res) => {
+            return res.json()
+        }).then((json) => {
+            console.log(json);
+        }).catch(error => {
+            loginErrorMsgBox.style.display = "block";
+            loginErrorMsg.innerHTML = "Please check account information again";
+        });
     };
 
     $('[data-toggle="tooltip"]').tooltip();
