--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -94,7 +94,7 @@
                                 <div class="p-t-20">
                                     <button class="btn btn-info" id="to-recover" type="button" ><i class="fa fa-lock m-r-5"></i> Forgot password</button>
                                     <button class="btn btn-info" id="signUpBtn" type="button" href="/signUp"><i class="fa fa-lock m-r-5"></i> SignUp</button>
-                                    <button id="loginButton" class="btn btn-success float-right" type="button">Login</button>
+                                    <button id="loginButton" class="btn btn-success float-right" type="submit">Login</button>
                                 </div>
                             </div>
                         </div>
@@ -154,19 +154,37 @@
 <!-- This page plugin js -->
 <!-- ============================================================== -->
 <script>
-    const URL_POST_JWT_TOKEN = "/auth";
+    const URL_POST_JWT_TOKEN = "/auth",
+        URL_GET_MAIN_BOARD = "/mainBoard";
 
     const signUpBtn = document.querySelector("#signUpBtn"),
         loginBtn = document.querySelector("#loginButton"),
         loginErrorMsgBox = document.querySelector("#loginErrorMsgBox"),
-        loginErrorMsg = document.querySelector("#loginErrorMsg");
+        loginErrorMsg = document.querySelector("#loginErrorMsg"),
+        loginForm = document.querySelector("#login_Form");
+
+
+    // Must change JWT_TOKEN value ""
+    window.onload = () => {
+        JWT_TOKEN = "";
+        init();
+    };
+
+    function init(){
+        loginForm.addEventListener("submit", handleSubmit);
+    }
+
+    function handleSubmit(event){
+        event.preventDefault();
+        doSubmit();
+    }
 
     signUpBtn.onclick = () => {
         window.location.href="/signUp"
     };
 
-    loginBtn.onclick = () => {
-
+    //loginBtn.onclick = () => {
+    const doSubmit = () => {
         fetch(URL_POST_JWT_TOKEN, {
             method: HTTP.METHOD_POST,
             headers: {
@@ -178,6 +196,8 @@
             return res.json()
         }).then((json) => {
             console.log(json);
+            JWT_TOKEN = json.token;
+            window.location.href="/mainBoard"
         }).catch(error => {
             loginErrorMsgBox.style.display = "block";
             loginErrorMsg.innerHTML = "Please check account information again";
