Setting - Enhance vo package structure

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <!-- Form -->
-                <form class="form-horizontal m-t-20" id="login_Form">
+                <form id="login_Form" class="form-horizontal m-t-20">
                     <div class="row p-b-30">
                         <div class="col-12">
                             <div class="input-group mb-3">
