--- a/src/main/resources/templates/signUp.html
+++ b/src/main/resources/templates/signUp.html
@@ -19,6 +19,10 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <title>info</title>
+
+    <!-- Common js -->
+    <script th:src="@{/common/js/const.js}"></script>
+    <script th:src="@{/common/js/util.js}"></script>
 </head>
 <body>
 <div class="main-wrapper">
@@ -45,11 +49,11 @@
                     <h2> Cellit SignUp </h2>
                 </div>
 
-                <div class="card-body border-top" th:if="${errorMsg}">
+                <div id="signUpErrorMsgBox" class="card-body border-top" style="display: none">
                     <div class="alert alert-danger" role="alert">
                         <h4 class="alert-heading">Login error</h4>
                         <hr>
-                        <p class="mb-0" th:text="${errorMsg}"></p>
+                        <p id="signUpErrorMsg" class="mb-0"></p>
                     </div>
                 </div>
 
@@ -62,7 +66,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
                                 </div>
-                                <input type="text" name="username" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
+                                <input type="text" id="accountname" name="accountname" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required>
                             </div>
 <!--                            &lt;!&ndash; email &ndash;&gt;-->
 <!--                            <div class="input-group mb-3">-->
@@ -77,7 +81,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-warning text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
                                 </div>
-                                <input type="password" name="password" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                <input type="password" id="password" name="password" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required>
                             </div>
 
                             <!-- confirm password -->
@@ -85,7 +89,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text bg-info text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
                                 </div>
-                                <input type="password" name="confirmPassword" class="form-control form-control-lg" placeholder=" Confirm Password" aria-label="Password" aria-describedby="basic-addon1" required>
+                                <input type="password" id="confirmPassword" name="confirmPassword" class="form-control form-control-lg" placeholder=" Confirm Password" aria-label="Password" aria-describedby="basic-addon1" required>
                             </div>
                         </div>
                     </div>
@@ -132,9 +136,14 @@
     $('[data-toggle="tooltip"]').tooltip();
     $(".preloader").fadeOut();
 
-    const URL_SIGN_UP = "/singUp";
+    const URL_SIGN_UP = "/api/account";
 
-    const signUpForm = document.querySelector("#signUpForm");
+    const signUpForm = document.querySelector("#signUpForm"),
+        userNameField = signUpForm.querySelector("#accountname"),
+        passwordField = signUpForm.querySelector("#password"),
+        confirmPasswordField = signUpForm.querySelector("#confirmPassword"),
+        signUpErrorMsgBox = document.querySelector("#signUpErrorMsgBox"),
+        signUpErrorMsg = document.querySelector("#signUpErrorMsg");
 
     window.onload = () => {
         init();
@@ -150,23 +159,33 @@
     }
 
     const doSubmit = () => {
-        fetch(URL_SIGN_UP, {
-            method: HTTP.METHOD_POST,
-            headers: {
-                'Content-type': MediaType.JSON
-            },
-            body: Util.formDataToJson("login_Form")
-        }).then(Error.handleFetchError)
-            .then((res) => {
-                return res.json()
-            }).then((json) => {
-            console.log(json);
-            JWT_TOKEN = json.token;
-            window.location.href="/mainBoard"
-        }).catch(error => {
-            loginErrorMsgBox.style.display = "block";
-            loginErrorMsg.innerHTML = "Please check account information again";
-        });
+
+        if(passwordField.value === confirmPasswordField.value){
+            const jsonObject = {};
+            jsonObject[userNameField.name] = userNameField.value;
+            jsonObject[passwordField.name] = passwordField.value;
+
+            fetch(URL_SIGN_UP, {
+                method: HTTP.METHOD_POST,
+                headers: {
+                    'Content-type': MediaType.JSON
+                },
+                body: JSON.stringify(jsonObject)
+            }).then(Error.handleFetchError)
+                .then((res) => {
+                    return res.json()
+                }).then((json) => {
+                console.log(json);
+                JWT_TOKEN = json.token;
+                window.location.href="/"
+            }).catch(error => {
+                signUpErrorMsgBox.style.display = "block";
+                signUpErrorMsg.innerHTML = "This account can't use, try another information.";
+            });
+        }else {
+            signUpErrorMsgBox.style.display = "block";
+            signUpErrorMsg.innerHTML = "Not match password";
+        }
     };
 
 </script>
