--- a/src/main/resources/templates/common/signUp.html
+++ b/src/main/resources/templates/common/signUp.html
@@ -122,6 +122,44 @@
     <!-- Right Sidebar -->
     <!-- ============================================================== -->
 </div>
+
+<!-- Modal Add Category -->
+<div class="modal fade none-border" id="add-new-event">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title"><strong>Create new Cell Unit</strong></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body">
+                <form id="createNewCellUnitForm">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label class="control-label">Cell Unit Name</label>
+                            <input id="cellName" name="cellName" class="form-control form-white" placeholder="Enter name" type="text"  />
+                        </div>
+                        <div class="col-md-6">
+                            <label class="control-label">Choose Category Color</label>
+                            <select class="form-control form-white" data-placeholder="Choose a color..." name="category-color">
+                                <option value="success">Success</option>
+                                <option value="danger">Danger</option>
+                                <option value="info">Info</option>
+                                <option value="primary">Primary</option>
+                                <option value="warning">Warning</option>
+                                <option value="inverse">Inverse</option>
+                            </select>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button id="createNewCellUnitSubmitButton" type="button" class="btn btn-danger waves-effect waves-light save-category">Save</button>
+                <button type="button" class="btn btn-secondary waves-effect" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- ============================================================== -->
 <!-- All Required js -->
 <!-- ============================================================== -->
@@ -172,11 +210,12 @@
                 },
                 body: JSON.stringify(jsonObject)
             }).then(Error.handleFetchError)
-                .then((res) => {
-                    return res.json()
-                }).then((json) => {
+            .then((res) => {
+                return res.json()
+            }).then((json) => {
                 console.log(json);
                 JWT_TOKEN = json.token;
+                alert("Create account successfully");
                 window.location.href="/"
             }).catch(error => {
                 signUpErrorMsgBox.style.display = "block";
