view - Enhance login using ajax

--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -30,118 +30,135 @@
     </head>
 </head>
 <body>
-<div class="main-wrapper">
-    <!-- ============================================================== -->
-    <!-- Preloader - style you can find in spinners.css -->
-    <!-- ============================================================== -->
-    <div class="preloader">
-        <div class="lds-ripple">
-            <div class="lds-pos"></div>
-            <div class="lds-pos"></div>
-        </div>
-    </div>
-    <!-- ============================================================== -->
-    <!-- Preloader - style you can find in spinners.css -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Login box.scss -->
-    <!-- ============================================================== -->
-    <div class="auth-wrapper d-flex no-block justify-content-center align-items-center bg-dark">
-        <div class="auth-box bg-dark border-top border-secondary">
-            <div id="loginform">
-                <div class="text-center p-t-20 p-b-20">
-<!--                    <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>-->
-                    <h2> Cellit </h2>
-                </div>
-<!--                th:if="${param.error}"-->
-<!--                <div class="card-body border-top"  th:if="${param.error}">-->
-<!--                    <div class="alert alert-danger" role="alert">-->
-<!--                        <h4 class="alert-heading">Login error</h4>-->
-<!--                        <hr>-->
-<!--                        <p class="mb-0" th:text="${param.error}"></p>-->
-<!--                    </div>-->
-<!--                </div>-->
-
-                <div id="loginErrorMsgBox" class="card-body border-top" style="display: none">
-                    <div class="alert alert-danger" role="alert">
-                        <h4 class="alert-heading">Login error</h4>
-                        <hr>
-                        <p id="loginErrorMsg" class="mb-0"></p>
-                    </div>
-                </div>
-
-                <!-- Form -->
-                <form id="login_Form" class="form-horizontal m-t-20">
-                    <div class="row p-b-30">
-                        <div class="col-12">
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-success text-white" id="basic-addon1"><i class="ti-user"></i></span>
-                                </div>
-                                <input type="text" id="accountname" name="accountname" class="form-control form-control-lg" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" required="">
-                            </div>
-                            <div class="input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text bg-warning text-white" id="basic-addon2"><i class="ti-pencil"></i></span>
-                                </div>
-                                <input type="password" name="password" class="form-control form-control-lg" placeholder="Password" aria-label="Password" aria-describedby="basic-addon1" required="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row border-top border-secondary">
-                        <div class="col-12">
-                            <div class="form-group">
-                                <div class="p-t-20">
-                                    <button class="btn btn-info" id="to-recover" type="button" ><i class="fa fa-lock m-r-5"></i> Forgot password</button>
-                                    <button class="btn btn-info" id="signUpBtn" type="button" href="/signUp"><i class="fa fa-lock m-r-5"></i> SignUp</button>
-                                    <button id="loginButton" class="btn btn-success float-right" type="submit">Login</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+<div id="mainContentWrapper">
+    <div class="main-wrapper">
+        <!-- ============================================================== -->
+        <!-- Preloader - style you can find in spinners.css -->
+        <!-- ============================================================== -->
+        <div class="preloader">
+            <div class="lds-ripple">
+                <div class="lds-pos"></div>
+                <div class="lds-pos"></div>
             </div>
-            <div id="recoverform">
-                <div class="text-center">
-                    <span class="text-white">Enter your e-mail address below and we will send you instructions how to recover a password.</span>
-                </div>
-                <div class="row m-t-20">
-                    <!-- Form -->
-                    <form class="col-12" action="index.html">
-                        <!-- email -->
-                        <div class="input-group mb-3">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text bg-danger text-white" id="basic-addon1"><i class="ti-email"></i></span>
-                            </div>
-                            <input type="text" class="form-control form-control-lg" placeholder="Email Address" aria-label="Username" aria-describedby="basic-addon1">
+        </div>
+        <!-- ============================================================== -->
+        <!-- Preloader - style you can find in spinners.css -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Login box.scss -->
+        <!-- ============================================================== -->
+        <div class="auth-wrapper d-flex no-block justify-content-center align-items-center bg-dark">
+            <div class="auth-box bg-dark border-top border-secondary">
+                <div id="loginform">
+                    <div class="text-center p-t-20 p-b-20">
+                        <!--                    <span class="db"><img src="../../assets/images/logo.png" alt="logo" /></span>-->
+                        <h2> Cellit </h2>
+                    </div>
+                    <!--                th:if="${param.error}"-->
+                    <!--                <div class="card-body border-top"  th:if="${param.error}">-->
+                    <!--                    <div class="alert alert-danger" role="alert">-->
+                    <!--                        <h4 class="alert-heading">Login error</h4>-->
+                    <!--                        <hr>-->
+                    <!--                        <p class="mb-0" th:text="${param.error}"></p>-->
+                    <!--                    </div>-->
+                    <!--                </div>-->
+
+                    <div id="loginErrorMsgBox" class="card-body border-top" style="display: none">
+                        <div class="alert alert-danger" role="alert">
+                            <h4 class="alert-heading">Login error</h4>
+                            <hr>
+                            <p id="loginErrorMsg" class="mb-0"></p>
                         </div>
-                        <!-- pwd -->
-                        <div class="row m-t-20 p-t-20 border-top border-secondary">
+                    </div>
+
+                    <!-- Form -->
+                    <form id="login_Form" class="form-horizontal m-t-20">
+                        <div class="row p-b-30">
                             <div class="col-12">
-                                <a class="btn btn-success" href="#" id="to-login" name="action">Back To Login</a>
-                                <button class="btn btn-info float-right" type="button" name="action">Recover</button>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-success text-white" id="basic-addon1"><i
+                                                class="ti-user"></i></span>
+                                    </div>
+                                    <input type="text" id="accountname" name="accountname"
+                                           class="form-control form-control-lg" placeholder="Username"
+                                           aria-label="Username" aria-describedby="basic-addon1" required="">
+                                </div>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text bg-warning text-white" id="basic-addon2"><i
+                                                class="ti-pencil"></i></span>
+                                    </div>
+                                    <input type="password" name="password" class="form-control form-control-lg"
+                                           placeholder="Password" aria-label="Password" aria-describedby="basic-addon1"
+                                           required="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row border-top border-secondary">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <div class="p-t-20">
+                                        <button class="btn btn-info" id="to-recover" type="button"><i
+                                                class="fa fa-lock m-r-5"></i> Forgot password
+                                        </button>
+                                        <button class="btn btn-info" id="signUpBtn" type="button" href="/signUp"><i
+                                                class="fa fa-lock m-r-5"></i> SignUp
+                                        </button>
+                                        <button id="loginButton" class="btn btn-success float-right" type="submit">
+                                            Login
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
                 </div>
+                <div id="recoverform">
+                    <div class="text-center">
+                        <span class="text-white">Enter your e-mail address below and we will send you instructions how to recover a password.</span>
+                    </div>
+                    <div class="row m-t-20">
+                        <!-- Form -->
+                        <form class="col-12" action="index.html">
+                            <!-- email -->
+                            <div class="input-group mb-3">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text bg-danger text-white" id="basic-addon1"><i
+                                            class="ti-email"></i></span>
+                                </div>
+                                <input type="text" class="form-control form-control-lg" placeholder="Email Address"
+                                       aria-label="Username" aria-describedby="basic-addon1">
+                            </div>
+                            <!-- pwd -->
+                            <div class="row m-t-20 p-t-20 border-top border-secondary">
+                                <div class="col-12">
+                                    <a class="btn btn-success" href="#" id="to-login" name="action">Back To Login</a>
+                                    <button class="btn btn-info float-right" type="button" name="action">Recover
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- ============================================================== -->
+        <!-- Login box.scss -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Page wrapper scss in scafholding.scss -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Page wrapper scss in scafholding.scss -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Right Sidebar -->
+        <!-- ============================================================== -->
+        <!-- ============================================================== -->
+        <!-- Right Sidebar -->
+        <!-- ============================================================== -->
     </div>
-    <!-- ============================================================== -->
-    <!-- Login box.scss -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Page wrapper scss in scafholding.scss -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Page wrapper scss in scafholding.scss -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Right Sidebar -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- Right Sidebar -->
-    <!-- ============================================================== -->
 </div>
 <!-- ============================================================== -->
 <!-- All Required js -->
@@ -162,7 +179,9 @@
         loginErrorMsgBox = document.querySelector("#loginErrorMsgBox"),
         loginErrorMsg = document.querySelector("#loginErrorMsg"),
         loginForm = document.querySelector("#login_Form"),
-        accountnameField = document.querySelector("#accountname");
+        accountnameField = document.querySelector("#accountname"),
+        mainContentWrapper = document.querySelector("#mainContentWrapper")
+    ;
 
 
     // Must change JWT_TOKEN value ""
@@ -171,34 +190,58 @@
         init();
     };
 
-    function init(){
+    function init() {
         loginForm.addEventListener("submit", handleSubmit);
     }
 
-    function handleSubmit(event){
+    function handleSubmit(event) {
         event.preventDefault();
         doSubmit();
     }
 
     signUpBtn.onclick = () => {
-        window.location.href="/signUp"
+        window.location.href = "/signUp"
     };
 
     const doSubmit = () => {
+
         fetch(URL_POST_JWT_TOKEN, {
             method: HTTP.METHOD_POST,
             headers: {
-                'Content-type': MediaType.JSON
+                'Content-type': MediaType.JSON,
+                'Accept': MediaType.HTML
             },
             body: Util.formDataToJson("login_Form")
         }).then(Error.handleFetchError)
-        .then((res) => {
-            return res.json()
-        }).then((json) => {
+            .then((res) => {
+                console.log(1)
+                return res.json()
+            }).then((json) => {
             JWT_TOKEN = json.token;
             accountname = accountnameField.value;
-            window.location.replace("/mainBoard")
-            //window.location.href="/mainBoard"
+            console.log(2)
+            fetch("/mainBoard", {
+                method: HTTP.METHOD_GET,
+                headers: {
+
+                    'Content-type': MediaType.JSON,
+                    'Authorization': HTTP.BASIC_TOKEN_PREFIX + json.token
+                },
+            }).then(x => {
+                return x.text()
+            }).then(x => {
+                // document.open("text/html", "replace");
+                // document.write(x);  // htmlCode is the variable you called newDocument
+                // document.close();
+                //document.body.innerHTML = x;
+                $("#mainContentWrapper").html(x);
+                //$("body").empty();
+                //$("body").html(x);
+                //document.body.innerHTML = "";
+                //$("body").append($.parseHTML(x));
+                //$("body").replaceWith(x);
+            });
+
         }).catch(error => {
             loginErrorMsgBox.style.display = "block";
             loginErrorMsg.innerHTML = "Please check account information again";
@@ -210,11 +253,11 @@
     // ==============================================================
     // Login and Recover Password
     // ==============================================================
-    $('#to-recover').on("click", function() {
+    $('#to-recover').on("click", function () {
         $("#loginform").slideUp();
         $("#recoverform").fadeIn();
     });
-    $('#to-login').click(function(){
+    $('#to-login').click(function () {
 
         $("#recoverform").hide();
         $("#loginform").fadeIn();
