--- a/src/main/resources/templates/cellUnit/mainBoard.html
+++ b/src/main/resources/templates/cellUnit/mainBoard.html
@@ -1,37 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>mainBoard</title>
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" th:href="@{/assets/images/favicon.png}">
-    <title>Matrix Template - The Ultimate Multipurpose admin template</title>
-    <!-- Custom CSS -->
-    <link th:href="@{/assets/libs/flot/css/float-chart.css}" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link th:href="@{/dist/css/style.min.css}" rel="stylesheet">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Common js -->
-    <script th:src="@{/common/js/const.js}"></script>
-    <script th:src="@{/common/js/util.js}"></script>
-
-</head>
-<body>
-<!-- ============================================================== -->
-<!-- Topbar header - style you can find in pages.scss -->
-<!-- ============================================================== -->
+<div>
 <header class="topbar" data-navbarbg="skin5">
     <nav class="navbar top-navbar navbar-expand-md navbar-dark">
 
@@ -47,12 +15,14 @@
                 <!-- create new -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="d-none d-md-block">Create New <i class="fa fa-angle-down"></i></span>
                         <span class="d-block d-md-none"><i class="fa fa-plus"></i></span>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal" data-target="#add-new-event">Create Cell Unit</a>
+                        <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal"
+                           data-target="#add-new-event">Create Cell Unit</a>
                         <a class="dropdown-item" href="#">....</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">....</a>
@@ -61,9 +31,11 @@
                 <!-- ============================================================== -->
                 <!-- Search -->
                 <!-- ============================================================== -->
-                <li class="nav-item search-box"> <a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i class="ti-search"></i></a>
+                <li class="nav-item search-box"><a class="nav-link waves-effect waves-dark" href="javascript:void(0)"><i
+                        class="ti-search"></i></a>
                     <form class="app-search position-absolute">
-                        <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"><i class="ti-close"></i></a>
+                        <input type="text" class="form-control" placeholder="Search &amp; enter"> <a class="srh-btn"><i
+                            class="ti-close"></i></a>
                     </form>
                 </li>
             </ul>
@@ -75,7 +47,8 @@
                 <!-- Comment -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-bell font-24"></i>
+                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false"> <i class="mdi mdi-bell font-24"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown" aria-labelledby="2">
                         <ul class="list-style-none">
@@ -133,7 +106,8 @@
                 <!-- Messages -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="font-24 mdi mdi-comment-processing"></i>
+                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" id="2" data-toggle="dropdown"
+                       aria-haspopup="true" aria-expanded="false"> <i class="font-24 mdi mdi-comment-processing"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right mailbox animated bounceInDown" aria-labelledby="2">
                         <ul class="list-style-none">
@@ -192,16 +166,24 @@
                 <!-- User profile and search -->
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../../assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
+                    <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href=""
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img
+                            src="../../assets/images/users/1.jpg" alt="user" class="rounded-circle" width="31"></a>
                     <div class="dropdown-menu dropdown-menu-right user-dd animated">
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My Profile</a>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My Balance</a>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i> Inbox</a>
+                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-user m-r-5 m-l-5"></i> My
+                            Profile</a>
+                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-wallet m-r-5 m-l-5"></i> My
+                            Balance</a>
+                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-email m-r-5 m-l-5"></i>
+                            Inbox</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
+                        <a class="dropdown-item" href="javascript:void(0)"><i class="ti-settings m-r-5 m-l-5"></i>
+                            Account Setting</a>
                         <div class="dropdown-divider"></div>
-                        <form id="logoutForm" method="post" th:action="@{/logout}">
-                            <button class="dropdown-item" type="submit"><i class="fa fa-power-off m-r-5 m-l-5"></i> Logout</button>
+                        <form id="logoutForm" method="post">
+                            <button class="dropdown-item" type="submit"><i class="fa fa-power-off m-r-5 m-l-5"></i>
+                                Logout
+                            </button>
                         </form>
                     </div>
                 </li>
@@ -220,7 +202,8 @@
     <div class="comment-widgets scrollable">
         <!-- Comment Row -->
         <div class="d-flex flex-row comment-row m-t-0">
-            <div class="p-2"><img src="../../assets/images/users/1.jpg" alt="user" width="50" class="rounded-circle"></div>
+            <div class="p-2"><img src="../../assets/images/users/1.jpg" alt="user" width="50" class="rounded-circle">
+            </div>
             <div class="comment-text w-100">
                 <h6 class="font-medium">James Anderson</h6>
                 <span class="m-b-15 d-block">Lorem Ipsum is simply dummy text of the printing and type setting industry. </span>
@@ -248,11 +231,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <label class="control-label">Cell Unit Name</label>
-                            <input id="cellName" name="cellName" class="form-control form-white" placeholder="Enter name" type="text"  />
+                            <input id="cellName" name="cellName" class="form-control form-white"
+                                   placeholder="Enter name" type="text"/>
                         </div>
                         <div class="col-md-6">
                             <label class="control-label">Choose Category Color</label>
-                            <select class="form-control form-white" data-placeholder="Choose a color..." name="category-color">
+                            <select class="form-control form-white" data-placeholder="Choose a color..."
+                                    name="category-color">
                                 <option value="success">Success</option>
                                 <option value="danger">Danger</option>
                                 <option value="info">Info</option>
@@ -265,15 +250,16 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button id="createNewCellUnitSubmitButton" type="button" class="btn btn-danger waves-effect waves-light save-category">Save</button>
+                <button id="createNewCellUnitSubmitButton" type="button"
+                        class="btn btn-danger waves-effect waves-light save-category">Save
+                </button>
                 <button type="button" class="btn btn-secondary waves-effect" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
 
-
-<script th:inline="javascript">
+<script type="text/javascript">
     const URL_GET_CELLS = "/api/account/" + accountname + "/cells",
         URL_CREATE_CELLS = "/api/cells",
         URL_AUTH_TOKEN = "/oauth/token";
@@ -281,6 +267,10 @@
     const createNewCellUnitForm = document.querySelector("#createNewCellUnitForm"),
         cellName = createNewCellUnitForm.querySelector("#cellName"),
         createNewCellUnitSubmitButton = document.querySelector("#createNewCellUnitSubmitButton");
+
+    (() => {
+
+    })();
 
     window.onload = () => {
         init();
@@ -297,6 +287,7 @@
     };
 
     const init = () => {
+        console.log(11111111)
         console.log(accountname)
         console.log(JWT_TOKEN)
         console.log(HTTP.METHOD_POST)
@@ -310,16 +301,16 @@
         headers.set("Authorization", 'Basic ' + btoa("myApp" + ":" + "pass"));
 
         const body = {
-            "username" : [[${username}]],
-            "password" : [[${password}]],
-            "grant_type" : "password",
+            "username": [[${username}]],
+            "password": [[${password}]],
+            "grant_type": "password",
         };
 
         fetch(URL_AUTH_TOKEN + "?" + new URLSearchParams(body), {
             method: 'POST',
             headers: headers,
         }).then(res => res.json())
-        .then(json => console.log(json));
+            .then(json => console.log(json));
 
         // formToJson("createNewCellUnitForm")
         // fetch(URL_CREATE_CELLS, {
@@ -350,5 +341,4 @@
 <!--Custom JavaScript -->
 <script th:src="@{/dist/js/custom.min.js}"></script>
 
-</body>
-</html>
+</div>
